<resources>
    <string name="app_name">Gallery</string>

    <!--Заголовки пунктов меню операции PhotosActivity-->
    <string name="menu_item_slide_show">Слайд-шоу</string>
    <string name="menu_item_selection">Выделение</string>
    <string name="menu_item_view">Вид</string>
    <string name="menu_item_sorting">Сортировка</string>
    <string name="menu_item_hide">Скрыть</string>
    <string name="menu_item_exclude">Исключить</string>
    <string name="menu_item_rename">Переименовать</string>
    <string name="menu_item_change_date">Исправить дату</string>
    <string name="menu_item_create_shortcut">Создать ярлык</string>
    <string name="menu_item_view_grid">Сетка</string>
    <string name="menu_item_view_list">Список</string>

    <!--Заголовки пунктов меню операции DetailsActivity-->
    <string name="menu_item_share">Поделиться</string>
    <string name="menu_item_delete">Удалить</string>
    <string name="menu_item_copy">Копирование</string>
    <string name="menu_item_details">Детали</string>
    <string name="menu_item_turn">Поворот</string>
    <string name="menu_item_edit">Редактировать</string>
    <string name="menu_item_set_as">Установить как</string>
    <string name="menu_item_move_to">Переместить в</string>
    <string name="menu_item_copy_to">Копировать в</string>
    <string name="menu_item_show_on_map">Показать на карте</string>
    <string name="menu_item_settings">Настройки</string>
    <string name="menu_item_sorting_name">По имени</string>
    <string name="menu_item_sorting_date">По дате</string>
    <string name="menu_item_sorting_shooting_date">По дате съемки</string>
    <string name="menu_item_sorting_size">По размеру</string>
    <string name="menu_item_left">Влево</string>
    <string name="menu_item_right">Вправо</string>
    <string name="menu_item_180">Поворот на 180°</string>

    <string-array name="image_ids">
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
        <item>@drawable/image_10</item>
        <item>@drawable/image_11</item>
        <item>@drawable/image_12</item>
        <item>@drawable/image_13</item>
        <item>@drawable/image_14</item>
        <item>@drawable/image_15</item>
        <item>@drawable/image_16</item>
        <item>@drawable/image_17</item>
        <item>@drawable/image_18</item>
        <item>@drawable/image_19</item>
        <item>@drawable/image_20</item>
        <item>@drawable/image_21</item>
        <item>@drawable/image_22</item>
    </string-array>

    <string-array name="folder_paths">
        <item>Галерея</item>
        <item>Ъ:/Галерея</item>
    </string-array>
</resources>
