<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:title="@string/menu_item_share"
        app:showAsAction="always"
        android:icon="@drawable/ic_share_white_24dp"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <item
        android:title="@string/menu_item_delete"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete_white_24dp">

        <menu>
            <item
                android:id="@+id/action_delete"
                android:title="@string/menu_item_delete"
                app:showAsAction="never"
                android:icon="@drawable/ic_delete_open_red_24dp"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_view"
        android:title="@string/menu_item_view"
        app:showAsAction="never"
        android:icon="@drawable/ic_delete_white_24dp"/>

    <item
        android:id="@+id/action_slide_show"
        android:title="@string/menu_item_slide_show"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_copy"
        android:title="@string/menu_item_copy"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_details"
        android:title="@string/menu_item_details"
        app:showAsAction="never"/>

    <item        
        android:title="@string/menu_item_turn"
        app:showAsAction="never">
            
        <menu>
            <item
                android:id="@+id/action_rotate_left"
                android:title="@string/menu_item_left"
                android:icon="@drawable/ic_rotate_left_white_24dp"/>

            <item
                android:id="@+id/action_rotate_right"
                android:title="@string/menu_item_right"
                android:icon="@drawable/ic_rotate_right_white_24dp"/>

            <item
                android:id="@+id/action_rotate_180"
                android:title="@string/menu_item_180"
                android:icon="@drawable/ic_rotate_180_white_24dp"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_edit"
        android:title="@string/menu_item_edit"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_set_as"
        android:title="@string/menu_item_set_as"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_move_to"
        android:title="@string/menu_item_move_to"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_copy_to"
        android:title="@string/menu_item_copy_to"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_rename"
        android:title="@string/menu_item_rename"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_show_on_map"
        android:title="@string/menu_item_show_on_map"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_item_settings"
        app:showAsAction="never"/>


</menu>